Fix header image on mobile

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -10,7 +10,7 @@
 
 .cover-image>img {
     object-fit: cover;
-    object-position: right center;
+    object-position: center 20%;
     max-width: 100%;
     height: 100vh;
 
